fix api documentation
